# sgmlish

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: dump.rs  enum.rs
src/: data.rs  entities.rs  error.rs  event_list.rs  fragment.rs  lib.rs  marked_sections.rs  text.rs  util.rs
src/de/: buffer.rs  mod.rs
src/parser/: config.rs  error.rs  events.rs  mod.rs  parser.rs  raw.rs  util.rs
src/transforms/: data.rs  helper.rs  marked_sections.rs  mod.rs  normalize_end_tags.rs  transform.rs
tests/: deserialize.rs  parse_marked_sections.rs
