[package]
name = "sgmlish"
version = "0.1.0"
description = "Simple parsing and deserialization of SGML"
license = "MIT"
repository = "https://github.com/mernen/sgmlish"
authors = ["Daniel Luz <dev.gsz@mernen.com>"]
categories = ["parser-implementations"]
keywords = ["sgml", "serde"]
edition = "2018"

exclude = [
    ".github/*",
    ".editorconfig",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
log = "0.4.14"
nom = "7.0"
serde = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
rust_decimal = { version = "1.15", features = ["serde-str"] }
serde = { version = "1", features = ["derive"] }
simple_logger = "1.13.0"
